# AIME

./: .gitignore  Convo_Nov-06-2023.docx  Medical_Interview_07-11-23__19-17.docx  Medical_Interview_07-11-23__23-18.docx  Medical_Interview_12-11-23__02-50.docx  conversation.docx  export_docx.py  helloTEST.docx  langchain_exportable_1.0.py  langchain_test.py  packages.txt  pyproject.toml  requirements.txt  research_data.xlsx  testout.txt
.devcontainer/: devcontainer.json
Conversations/: Rey_04-12-23__14-15.docx  Rey_04-12-23__14-19.docx  Rey_04-12-23__14-20.docx
Global_Resources/: Website_introduction.docx
IDEA/: convo_testing.py  db_stuff.py  human_eval.py  lookups.py  main.py  old.py  short.py  view.py  view_eval.py  view_evals.py
Medical_Info/: Physical_examination_for_first_test_case.docx
Patient_Info/: JackieSmith.json  JackieSmith_case.json  JackieSmith_grading.json  JackieSmith_weights.json  JeffreySmith copy.json  JeffreySmith.json  JeffreySmith_explanation.docx  JeffreySmith_physical.docx  JennySmith.json  JohnSmith.json  JohnSmith_case.json  JohnSmith_grading.json  JohnSmith_weights.json  Physical_Jackie.docx  SamuelThompson.json  SamuelThompson_physical.docx  SarahThompson.json  SarahThompson_physical.docx  grading_atypicals.json
Prompt/: Chat_GPT_prompt_V1023_OBJ1.docx  JackieSmith_12-11.txt  JohnSmith_12-11.txt  Prompt_10:28.txt  Prompt_11-7.txt  Prompt_12-11.txt  Website_introduction.docx  questions_open.txt
Prompts/: Base_1-15.txt  Base_2-23.txt  Base_3-10.txt  Base_3-14_anth.txt  Base_3-27.txt  Base_4-22.txt  Base_5-16.txt  ClassBase_1-29.txt  (+49 more)
(+199 files in other folders)
