[tool.poetry]
name = "aime"
version = "0.1.0"
description = ""
authors = ["ricklon <rianders@docs.rutgers.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
streamlit = "^1.30.0"
pydub = "^0.25.1"
langchain = "^0.1.3"
langchain-community = "^0.0.15"
openai = "^1.9.0"
python-docx = "^1.1.0"
sendgrid = "^6.11.0"
av = "^11.0.0"
streamlit-audiorecorder = "^0.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
